--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ pymongo = {extras = ["tls"],version = "*"}
 python-dotenv = "*"
 dnspython = "*"
 requests = "*"
+discord-flags = "*"
 
 [requires]
 python_version = "3.8"
