--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .env
+monitor.py
 
 # Created by https://www.gitignore.io/api/python,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=python,visualstudiocode
