--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 .env
 monitor.py
+*/smallsprites/
+*/smallsprites.zip
+**/.DS_Store
 
 # Created by https://www.gitignore.io/api/python,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=python,visualstudiocode
