Add rare candies

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 monitor.py
 */smallsprites/
 */smallsprites.zip
+*/shiny.zip
 **/.DS_Store
 
 # Created by https://www.gitignore.io/api/python,visualstudiocode
