--- a/Pipfile
+++ b/Pipfile
@@ -18,9 +18,8 @@ umongo = "==3.0.0b7"
 flask = "*"
 dblpy = "*"
 jishaku = "*"
-"discord.py" = "*"
+"discord.py" = "==1.4.1"
 pokedex = {git = "https://github.com/veekun/pokedex.git"}
-discord = {git = "https://github.com/Rapptz/discord.py.git", ref = "sharding-rework"}
 
 [requires]
 python_version = "3.8"
