--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ jishaku = "*"
 pokedex = {git = "https://github.com/veekun/pokedex.git"}
 geocoder = "*"
 suntime = "*"
+numpy = "*"
 
 [requires]
 python_version = "3.8"
