Fix market issue

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .env
 **/.DS_Store
 logs/
+utils/
 
 # Created by https://www.gitignore.io/api/python,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=python,visualstudiocode
