--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,7 @@ umongo = "^3.0.0b8"
 motor = "^2.2.0"
 jishaku = "^1.19.1"
 pokedex = {git = "https://github.com/veekun/pokedex.git"}
-discord-ext-ipc = {git = "https://github.com/oliver-ni/discord-ext-ipc"}
-quart = "^0.13.1"
+discord-ext-ipc = {git = "https://github.com/poketwo/discord-ext-ipc"}
 discord-ext-alternatives = "^2020.7.30"
 dnspython = "^2.0.0"
 suntime = "^1.2.5"
@@ -22,8 +21,10 @@ geocoder = "^1.38.1"
 humanfriendly = "^8.2"
 unidecode = "^1.1.1"
 discord-flags = "^2.1.1"
+quart = "^0.13.1"
 
 [tool.poetry.dev-dependencies]
+black = {version = "^20.8b1", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0a5"]
