--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ humanfriendly = "^8.2"
 unidecode = "^1.1.1"
 discord-flags = "^2.1.1"
 quart = "^0.13.1"
+stripe = "^2.51.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^20.8b1", allow-prereleases = true}
