--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ unidecode = "^1.1.1"
 discord-flags = "^2.1.1"
 quart = "^0.13.1"
 stripe = "^2.51.0"
+durations_nlp = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^20.8b1", allow-prereleases = true}
