--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ quart = "^0.13.1"
 stripe = "^2.51.0"
 durations_nlp = "^1.0.1"
 aioredis = "^1.3.1"
+uvloop = "^0.14.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^20.8b1", allow-prereleases = true}
