--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ uvloop = "^0.14.0"
 sentry-sdk = "^0.19.2"
 Quart-CORS = "^0.3.0"
 discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus.git"}
+aioredis-lock = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^20.8b1", allow-prereleases = true}
