--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,3 +35,6 @@ black = {version = "^20.8b1", allow-prereleases = true}
 [build-system]
 requires = ["poetry-core>=1.0.0a5"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 100
