--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,5 +19,5 @@ jobs:
           username: oliver-ni
           password: ${{ secrets.GHCR_PAT }}
           registry: ghcr.io
-          image_name: poketwo
+          image_name: p2-priv
           image_tag: latest,${{ github.sha }}
