--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ aioredis = "^1.3.1"
 uvloop = "^0.14.0"
 discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus.git"}
 aioredis-lock = "^0.1.0"
+discord-ext-menus-views = {git = "https://github.com/oliver-ni/discord-ext-menus-views.git"}
 
 [tool.poetry.dev-dependencies]
 black = {version = "^20.8b1", allow-prereleases = true}
