--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,12 @@ discord-flags = "^2.1.1"
 quart = "^0.13.1"
 durations_nlp = "^1.0.1"
 aioredis = "^1.3.1"
-uvloop = "^0.14.0"
+uvloop = "^0.15.2"
 discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus.git"}
 aioredis-lock = "^0.1.0"
 discord-ext-menus-views = {git = "https://github.com/oliver-ni/discord-ext-menus-views.git"}
 expiringdict = "^1.2.1"
+aiologger = "^0.6.1"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^20.8b1", allow-prereleases = true}
