--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,28 +7,25 @@ license = "GPLv3"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-"discord.py" = {git = "https://github.com/Rapptz/discord.py.git", rev = "6b1d46a1eac4a6fcd2607c50fda02ddb10a330a8"}
+"discord.py" = { git="https://github.com/Rapptz/discord.py.git", branch="master", extras=["speed"] }
 umongo = "3.0.0b10"
 motor = "^2.2.0"
-jishaku = "^1.19.1"
+jishaku = "^2.1.0"
 dnspython = "^2.0.0"
 suntime = "^1.2.5"
 geocoder = "^1.38.1"
 humanfriendly = "^8.2"
-unidecode = "^1.1.1"
 discord-flags = "^2.1.1"
-quart = "^0.13.1"
 durations_nlp = "^1.0.1"
 aioredis = "^1.3.1"
 uvloop = "^0.15.2"
-discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus.git"}
+discord-ext-menus = { git="https://github.com/Rapptz/discord-ext-menus.git" }
 aioredis-lock = "^0.1.0"
-discord-ext-menus-views = {git = "https://github.com/oliver-ni/discord-ext-menus-views.git"}
+discord-ext-menus-views = { git="https://github.com/oliver-ni/discord-ext-menus-views.git" }
 expiringdict = "^1.2.1"
-aiologger = "^0.6.1"
 
 [tool.poetry.dev-dependencies]
-black = {version = "^20.8b1", allow-prereleases = true}
+black = { version="^20.8b1", allow-prereleases=true }
 
 [build-system]
 requires = ["poetry-core>=1.0.0a5"]
