--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dnspython = "^2.0.0"
 suntime = "^1.2.5"
 geocoder = "^1.38.1"
 humanfriendly = "^8.2"
-discord-flags = "^2.1.1"
+discord-flags = {git = "https://github.com/oliver-ni/Flag-Parsing.git"}
 durations_nlp = "^1.0.1"
 aioredis = "^1.3.1"
 uvloop = "^0.15.2"
