Add branch name to tags

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,4 +22,4 @@ jobs:
           password: ${{ secrets.GHCR_PAT }}
           registry: ghcr.io
           image_name: poketwo
-          image_tag: latest,${{ github.sha }}
+          image_tag: latest,${{ env.BRANCH_NAME }},${{ github.sha }}
