--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: Docker Image CI
 on:
   push:
     branches:
-      - master
+      - "*"
 
 jobs:
   build:
@@ -14,7 +14,9 @@ jobs:
           token: ${{ secrets.GHCR_PAT }}
           submodules: true
 
-      - uses: nelonoel/branch-name@v1.0.1
+      - name: Prepare Environment
+        uses: nelonoel/branch-name@v1.0.1
+
       - name: Publish Image
         uses: whoan/docker-build-with-cache-action@v5
         with:
