--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dnspython = "^2.0.0"
 suntime = "^1.2.5"
 geocoder = "^1.38.1"
 humanfriendly = "^8.2"
-discord-flags = {git = "https://github.com/oliver-ni/Flag-Parsing.git"}
+discord-flags = { git = "https://github.com/oliver-ni/Flag-Parsing.git" }
 durations_nlp = "^1.0.1"
 aioredis = "^1.3.1"
 uvloop = "^0.15.2"
@@ -25,7 +25,7 @@ discord-ext-menus-views = { git = "https://github.com/oliver-ni/discord-ext-menu
 expiringdict = "^1.2.1"
 
 [tool.poetry.dev-dependencies]
-black = { version = "^20.8b1", allow-prereleases = true }
+black = "^21.12b0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0a5"]
