--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ license = "GPLv3"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-"discord.py" = { git = "https://github.com/poketwo/discord.py.git", branch = "master", extras = ["speed"] }
 umongo = "3.0.0b10"
 motor = "^2.2.0"
 jishaku = "^2.1.0"
@@ -23,6 +22,7 @@ discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus.git" }
 aioredis-lock = "^0.1.0"
 discord-ext-menus-views = { git = "https://github.com/oliver-ni/discord-ext-menus-views.git" }
 expiringdict = "^1.2.1"
+"discord.py" = {git = "https://github.com/Rapptz/discord.py.git"}
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
