--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,11 @@ aioredis-lock = "^0.1.0"
 discord-ext-menus-views = { git = "https://github.com/oliver-ni/discord-ext-menus-views.git" }
 expiringdict = "^1.2.1"
 "discord.py" = { git = "https://github.com/Rapptz/discord.py.git" }
+structlog = "^22.3.0"
+python-json-logger = "^2.0.4"
 
 [tool.poetry.dev-dependencies]
-black = "^21.12b0"
+black = "^22.12.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0a5"]
