--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,27 +1,33 @@
-name: Docker Image CI
+name: Build Image
+
+permissions:
+  packages: write
 
 on:
   push:
-    branches:
-      - "*"
+  pull_request:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.GHCR_PAT }}
-          submodules: true
+      - uses: docker/setup-buildx-action@v2
 
-      - name: Prepare Environment
-        uses: nelonoel/branch-name@v1.0.1
-
-      - name: Publish Image
-        uses: whoan/docker-build-with-cache-action@v5
+      - id: metadata
+        uses: docker/metadata-action@v4
         with:
-          username: poketwo
-          password: ${{ secrets.GHCR_PAT }}
+          images: ghcr.io/contestdojo/api
+
+      - uses: docker/login-action@v2
+        with:
           registry: ghcr.io
-          image_name: poketwo
-          image_tag: latest,${{ env.BRANCH_NAME }},${{ github.sha }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: docker/build-push-action@v4
+        with:
+          tags: ${{ steps.metadata.outputs.tags }}
+          labels: ${{ steps.metadata.outputs.tags }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          push: true
