Add token for submodule clone

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,3 +31,5 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           push: true
+          secrets: |
+            GIT_AUTH_TOKEN=${{ secrets.GHCR_PAT }}
