--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,13 +16,13 @@ jobs:
       - id: metadata
         uses: docker/metadata-action@v4
         with:
-          images: ghcr.io/contestdojo/api
+          images: ghcr.io/poketwo/poketwo
 
       - uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_PAT }}
 
       - uses: docker/build-push-action@v4
         with:
